--- a/source/css/_components/post/post-markdown.styl
+++ b/source/css/_components/post/post-markdown.styl
@@ -1,9 +1,10 @@
 .post-markdown {
-  line-height: 1.8;
+  line-height: 1.2;
+  font-size: 0.9em;
   
-  p {
-    overflow: auto;
-  }
+  // p {
+  //   overflow: auto;
+  // }
 
   h1 {
     font-size: 1.8em;
