--- a/source/css/_components/sidebar/sidebar.styl
+++ b/source/css/_components/sidebar/sidebar.styl
@@ -16,7 +16,7 @@
   transform: translateX(0);
   visibility: hidden;
   the-transition();
-  the-box-shadow();
+  // the-box-shadow();
 
   +mobile() {
     left: - $sidebar-width;
