--- a/source/css/_components/sidebar/site-overview.styl
+++ b/source/css/_components/sidebar/site-overview.styl
@@ -3,9 +3,21 @@
   width: 100%;
   .img {
     margin-top: 30px;
-    width: 50%;
+    width: 70%;
   }
 }
+
+.site-menu {
+  padding-top: 1.0rem;
+  font-size: 14px;
+  color: black;
+  .a {
+    align-content: center;
+  }
+ 
+  
+}
+
 
 .site-nav {
   padding-top: 5rem;
