--- a/layout/_partial/layout.pug
+++ b/layout/_partial/layout.pug
@@ -8,13 +8,12 @@ html(lang=config.language)
     meta(charset='UTF-8')
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(name='theme-color', content=theme.colors.primary)
     meta(name='author' content=author)
     meta(name="copyright" content=copyright)
-    !=meta_generator()
-    meta(name='theme' content="hexo-theme-yun")
-    !=open_graph()
-    - page_title(page)
+    //- !=meta_generator()
+    //- meta(name='theme' content="hexo-theme-yun")
+    //- !=open_graph()
+    //- - page_title(page)
     //- if page.title
     //-   title=page.title + ' | ' + title
     //- else
