--- a/layout/page.pug
+++ b/layout/page.pug
@@ -7,24 +7,28 @@ block content
     article#page
 
     if page.type === 'projects'
-      .album-list
+      .project-list
         for post in site.posts.data
           if post.type === 'project'
             li.project-item
-              .project-thumbnail
+              .thumbnial
+                a(href=url_for(post.path))
+                  img(loading='lazy', src=post.thumbnail, style='max-width:300px;', onerror='this.src=CONFIG.anonymous_image')
+              .description
+                p.name
+                  a(href=url_for(post.path))
+                    !=post.title
+                p.desc!=post.desc
 
-              .project-desc
 
 
-
-
-            li.project-item
-              a.project-thumbnail(href=url_for(post.path))
-                img(loading='lazy', src=post.thumbnail, style='max-width:300px;', onerror='this.src=CONFIG.anonymous_image')
-              <br>
-              a.project-title(href=url_for(post.path))
-                !=post.title
-              .project-desc!=post.desc
+            //- li.project-item
+            //-   a.project-thumbnail(href=url_for(post.path))
+            //-     img(loading='lazy', src=post.thumbnail, style='max-width:300px;', onerror='this.src=CONFIG.anonymous_image')
+            //-   <br>
+            //-   a.project-title(href=url_for(post.path))
+            //-     !=post.title
+            //-   .project-desc!=post.desc
 
             //- a.album-list-item(href=url_for(post.path))
             //-   figure(title=post.desc)
