--- a/source/css/_components/sidebar/site-overview.styl
+++ b/source/css/_components/sidebar/site-overview.styl
@@ -10,6 +10,7 @@
 .site-menu {
   padding-top: 1.0rem;
   font-size: 14px;
+  font-weight: 520;
   color: black;
   .a {
     align-content: center;
